--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,23 +9,29 @@ on:
       - main
 
 jobs:
-  run-test:
+  run-tests:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout todolist APP
+      - name: Checkout Flask app repo
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install Dependencies
+      - name: Install Flask app dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
+
+      - name: Run Flask app
+        run: |
+          source venv/bin/activate
+          flask initdb
+          flask translate compile
+          nohup flask run > flask.log 2>&1 &
 
       - name: Checkout Test Repository
         run: git clone https://github.com/Davrpob0/topicosAvanzados-Test.git
@@ -35,7 +41,7 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: Install Test Dependencies
+      - name: Install dependencies
         run: |
           cd topicosAvanzados-Test
           npm ci
@@ -43,13 +49,15 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright Tests
-        run: npx playwright test
+      - name: Run Playwright tests
+        run: |
+          cd topicosAvanzados-Test
+          npx playwright test todolist.spec.ts
 
-      - name: Upload Playwright Report
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: topicosAvanzados-Test
+          path: topicosAvanzados-Test/playwright-report/
           retention-days: 30
