--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Run Playwright tests
         run: |
           cd topicosAvanzados-Test
-          npx playwright test todolist.spec.ts
+          npx playwright test
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
