--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd todoism-eafit-tests
+          cd topicosAvanzados-Test
           npm ci
 
       - name: Install Playwright Browsers
@@ -52,7 +52,7 @@ jobs:
 
       - name: Run Playwright tests
         run: |
-          cd todoism-eafit-tests
+          cd topicosAvanzados-Test
           npx playwright test todolist.spec.ts
 
       - name: Upload Artifact
@@ -60,5 +60,5 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
-          path: todoism-eafit-tests/playwright-report/
+          path: topicosAvanzados-Test/playwright-report/
           retention-days: 30
