--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Run Playwright tests
         run: |
           cd topicosAvanzados-Test
-          npx playwright test todolist.spec.ts
+          npx playwright test todoTest.spec.ts
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
